frontend/tests/cases/negative/unboundTyVarInFunConstraint.gr
interface Simple a where
  simple : a -> a

-- 'b' is not bound in the forall
simple1 : forall (a : Type) . {Simple b} => a -> a
simple1 x = x
